<?xml version="1.0"?>
<package format="2">
  <name>talmech</name>
  <version>1.0.0</version>
  <description>The talmech package</description>
  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <author email="expertinos.unifei@gmail.com">Expertinos UNIFEI</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/talmech</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>talmech_msgs</build_depend>
  <build_depend>variant_topic_tools</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>talmech_msgs</build_export_depend>
  <build_export_depend>variant_topic_tools</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>talmech_msgs</exec_depend>
  <exec_depend>variant_topic_tools</exec_depend>

  <export>
  </export>
</package>
