<?xml version="1.0"?>
<package format="2">
  <name>talmech_msgs</name>
  <version>1.0.0</version>
  <description>This package contains the definition of the message, service and action files of the TAlMech framework</description>
  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <author email="expertinos.unifei@gmail.com">Expertinos UNIFEI</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/talmech_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>


